--- a/src/components/ProfilesFilter/ProfilesFilter.css
+++ b/src/components/ProfilesFilter/ProfilesFilter.css
@@ -179,6 +179,7 @@
 .search-icon {
   color: #999;
   font-size: 14px;
+  margin-left: auto;
 }
 
 /* Filter Options */
